--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <!----Side bar--->
 		  <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(Haimantika.jpg);"></div>
+				<div class="author-img" style="background-image: url(images/Haimantika.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="https://www.linkedin.com/in/haimantika-mitra-3b8a9b160/" target="_blank">Haimantika Mitra</a></h1>
 				<p><strong>B.tech in ECE,<br>
 					Siliguri Institute of Tehnology</strong></p>
@@ -184,14 +184,14 @@
 								<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
 									<a href="https://www.linkedin.com/in/haimantika-mitra-3b8a9b160/" target="_blank">
 										<div class="services2 color-1" align=center>
-											<span class="icon1"><img src="linkedinlogo.png" width="220" height="70" alt="LinkedIn"></span>
+											<span class="icon1"><img src="images/linkedinlogo.png" width="220" height="70" alt="LinkedIn"></span>
 										</div>
 									</a>
 								</div>
 								<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
 										<a href="https://github.com/Haimantika?tab=repositories" target="_blank">
 											<div class="services2 color-4" align=center>
-												<span class="icon1"><img src="linkedinlogo.png" width="200" height="70" alt="Github Repository"></span>
+												<span class="icon1"><img src="images/githublogo.png" width="200" height="70" alt="Github Repository"></span>
 											</div>
 										</a>
 									</div>
@@ -417,7 +417,7 @@
 										The Microsoft Student Partners are a global group of on-campus ambassadors who are eager to help fellow students, lead in their local tech community, and develop technical and career skills for the future. <br>
 										Tech focus: Microsoft Azure, Office 365, Teams </p>
 									  <p></p>
-									  <a href="https://studentpartners.microsoft.com/en-US/Account" target="_blank"><img src="msp.png" width="200" height="70" title="Intel Software Innovator" alt="Intel Software Innovator" target="_blank"></a>
+									  <a href="https://studentpartners.microsoft.com/en-US/Account" target="_blank"><img src="images/msp.png" width="200" height="70" title="Intel Software Innovator" alt="Intel Software Innovator" target="_blank"></a>
 
 					               </div>
 					            </div>
@@ -432,7 +432,7 @@
 					               <div class="timeline-label">
 					               	<h2><a href="#">Actions on Google</a> <span>February 2019 - Present </span></h2>
 									  <p><strong>Co-organizer</strong><br>Creating actions for Google Assistant</p>
-									  <a href="https://console.actions.google.com/" target="_blank"><img src="googleassistantlogo.png" width="200" height="70" title="GDG Siliguri" alt="GDG Siliguri" target="_blank"></a>
+									  <a href="https://console.actions.google.com/" target="_blank"><img src="images/googleassistantlogo.png" width="200" height="70" title="GDG Siliguri" alt="GDG Siliguri" target="_blank"></a>
 
 					               </div>
 					            </div>
@@ -450,7 +450,7 @@
 										   <p><strong>Student Developer</strong><br>
 											GitHub Education helps students, teachers, and schools access the tools and events they need to shape the next generation of software development.</p>
 										  <p></p>
-										  <a href="https://github.com/Haimantika" target="_blank"><img src="githublogo.png" width="180" height="60" title="Github" alt="Github" target="_blank"></a>
+										  <a href="https://github.com/Haimantika" target="_blank"><img src="images/github-logo.png" width="180" height="60" title="Github" alt="Github" target="_blank"></a>
 
 									   </div>
 									</div>
@@ -511,7 +511,7 @@
 											 <span>March 2020</span></h2>
 										   <p><strong>Smart India Hackathon,2020</strong><br>
 											Project proposal on "Flood  detection and warning in hydel projects" by Ministry of Power, got selected in SIH'20</p>
-											<p><strong><a href="https://www.icimsat2019.com" target="_blank">ICIMSAT 2019</a></strong><br>
+											<p><strong><a href="sih.gov.in" target="_blank">SIH 2020</a></strong><br>
 										  <p></p>
 									   </div>
 									</div>
@@ -529,7 +529,7 @@
 											 <span>February 2020</span></h2>
 										   <p><strong>Ministry of Micro, Small and Medium enterprise</strong><br>
 											Project on 'Waste Collecting Bot-SwacchBot' got selected in the first phase by MSME.</p>
-											<p><strong><a href="https://www.icimsat2019.com" target="_blank">ICIMSAT 2019</a></strong><br>
+									
 										  <p></p>
 									   </div>
 									</div>
@@ -545,7 +545,7 @@
 										   <div class="timeline-label">
 											  <h2><a href="#">Microsoft Student Partner</a><br>
 												 <span>January 2020</span></h2>
-											   <p><strong>Intel</strong><br>
+											   <p><strong>Microsoft</strong><br>
 												Got selected as a student partner by Microsoft</p>
 											  <p></p>	
 										   </div>
