--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 								<div class="hire">
 									<h2>Looking for my resume? <br>
 										Here you go!</h2>
-										<a href="http://haimantika.tech/Haimantika'sResume.pdf" class="btn-hire" style="text-align: center;" target="_blank">Download Resume</a>
+										<a href="Haimantika'sResume.pdf" class="btn-hire" style="text-align: center;" target="_blank">Download Resume</a>
 								</div>
 							</div>
 						</div>
