--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@
 								<div class="hire">
 									<h2>Looking for my resume? <br>
 										Here you go!</h2>
-										<a href="Haimantika'sResume.pdf" class="btn-hire" style="text-align: center;" target="_blank">Download Resume</a>
+										<object data=”Haimantika's Resume.pdf#page=1" type=”application/pdf” width=”100%” height=”100%”>
+													 </object>
 								</div>
 							</div>
 						</div>
