--- a/index.html
+++ b/index.html
@@ -201,8 +201,7 @@
 								<div class="hire">
 									<h2>Looking for my resume? <br>
 										Here you go!</h2>
-										<object data=”Haimantika's Resume.pdf#page=1" type=”application/pdf” width=”100%” height=”100%”>
-													 </object>
+										<a href="http://haimantika.github.io/Haimantika's Resume.pdf" class="btn-hire" style="text-align: center;" target="_blank">Download Resume</a>
 								</div>
 							</div>
 						</div>
