--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
 							<div class="row animate-box" data-animate-effect="fadeInRight">
 										<div class="services color-5">
 											<span class="icon2"><i class="icon-mail"></i></span>
-											<strong>Email ID: <a href = "mailto: haimantikamitra@gmail.com">haimantikamitra7@gmail.com</a></strong>
+											<strong>Email ID: <a href = "mailto: haimantikamitra@gmail.com">haimantikamitra@gmail.com</a></strong>
 											<hr>
 											<span class="icon2"><i class="icon-phone"></i></span>
 											<strong>Contact Number: <a href="tel:+91-8101121869">+91-8944992236</a></strong>
