--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
 											<strong>Contact Number: <a href="tel:+91-8101121869">+91-8944992236</a></strong>
 											<hr>
 											<span class="icon2"><i class="icon-whatsapp"></i></span>
-											<strong>Whatsapp: <a href="https://wa.me/8101121869/?text=Hello%20Arkaprova%20" target="_blank">8944992236</a></strong>
+											<strong>Whatsapp: <a href="https://wa.me/8101121869/?text=Hello%20Haimantika%20" target="_blank">8944992236</a></strong>
 										</div>
 							</div>
 						</div>
@@ -638,7 +638,7 @@
 									
 								</p>
                             </div> <br>
-                                <p style="text-align: center; margin-bottom: 0px;"><strong>2019 &copy; Arkaprova Deb</strong></p>
+                                <p style="text-align: center; margin-bottom: 0px;"><strong>2019 &copy; Haimantika Mitra</strong></p>
                         </div>
                     </div>
                 </div>
