--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
                         <div class="hire">
                             <p style="text-align: center"><strong>Thanks for visiting my website.<br>Have a great day ahead!</strong></p>
                             <div align=center>
-									<a href="https://twitter.com/arkaprovaz?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @arkaprovaz</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+									<a href="https://twitter.com/HaimantikaM?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @Haimantika Mitra</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                                 <!-- <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet"><a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/r194dME8y"><img src="https://bmc-cdn.nyc3.digitaloceanspaces.com/BMC-button-images/BMC-btn-logo.svg" alt="Buy me a coffee"><span style="margin-left:5px">Buy me a coffee</span></a> -->
                                 <br><br><br>
 								<p style="font-size: 30px; margin-bottom: 0px;">
