--- a/index.html
+++ b/index.html
@@ -488,6 +488,7 @@
 		        <!--------------Achievements----------->
 
 				<section class="colorlib-achievements" data-section="achievements">
+					<section style="padding-left=50px;" class="colorlib-achievements" data-section="achievements">
 					<div class="colorlib-narrow-content">
 						<div class="row">
 							<div class="col-md-12 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInRight">
